# cfgsync

./: .gitignore  .versionrc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  mise.toml  release.toml  renovate.json  session.json
.opencode/: .gitignore
docs/: config-schema.json  rename-research.md  security.md
e2e-tests/: Dockerfile  deno.json  docker-compose.yml  run-docker.sh  run.sh  test-absolute-target.test.ts  test-basic-sync-to-source.test.ts  test-basic-sync-to-target.test.ts  test-chown.test.ts  test-conflict-detection.test.ts  test-copy-to-source-owner.test.ts  test-debug-flag.test.ts  test-delete-from-source.test.ts  test-delete-from-target.test.ts  test-diff-conflict.test.ts  test-hooks-dry-run.test.ts  test-hooks-nonroot-owner.test.ts  test-hooks-not-run-on-copy-to-source.test.ts  test-hooks-root-config-owner.test.ts  test-hooks-root-configured-owner.test.ts  test-hooks-unchanged.test.ts  test-hooks-watch.test.ts  test-hooks-working-directory.test.ts  test-hooks.test.ts  test-identical-untracked.test.ts  test-ignore-non-matching.test.ts  test-interactive-resolve.test.ts  test-multi-group-independent.test.ts  test-multi-group-overlap.test.ts  test-multi-group-owner.test.ts  test-multi-group-per-glob.test.ts  test-per-glob-no-group-defaults.test.ts  test-permission-warning.test.ts  test-relative-paths.test.ts  test-resolve-tilde.test.ts  test-root-no-permissions.test.ts  test-root-permissions-enforced.test.ts  test-schema-json.test.ts  test-security-root-target-confirm.test.ts  test-status-short.test.ts  (+4 more)
plans/: 001-new-config-format.md  002-hooks.md  preserve-source-ownership-under-sudo.md  (+1 more)
src/: config.rs  (+9 more)
(+60 files in other folders)
