[package]
name = "cfgsync"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
glob = "0.3.3"
similar = "2.7.0"
chrono = { version = "0.4.44", features = ["serde"] }
nix = { version = "0.30.1", features = ["user", "fs"] }
schemars = "0.8"
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"
tempfile = "3.27.0"
