[package]
name = "cfgsync"
version = "0.4.2"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
glob = "0.3.3"
similar = "3.1.1"
chrono = { version = "0.4.45", features = ["serde"] }
nix = { version = "0.31.3", features = ["user", "fs"] }
notify = "8.2.0"
schemars = "1.2.1"
serde_json = "1.0.150"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tempfile = "3.27.0"
